--- a/app/src/main/res/menu/menu_photo_gallery.xml
+++ b/app/src/main/res/menu/menu_photo_gallery.xml
@@ -1,9 +1,12 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".PhotoGalleryActivity">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
-		android:id="@+id/action_settings"
-		android:orderInCategory="100"
-		android:showAsAction="never"
-		android:title="@string/action_settings"/>
+		android:id="@+id/menu_item_search"
+		android:icon="@android:drawable/ic_menu_search"
+		android:showAsAction="ifRoom"
+		android:title="@string/search"/>
+	<item
+		android:id="@+id/menu_item_clear"
+		android:icon="@android:drawable/ic_menu_close_clear_cancel"
+		android:showAsAction="ifRoom"
+		android:title="@string/clear_search"/>
 </menu>
