--- a/app/src/main/res/menu/menu_photo_gallery.xml
+++ b/app/src/main/res/menu/menu_photo_gallery.xml
@@ -9,4 +9,8 @@
 		android:icon="@android:drawable/ic_menu_close_clear_cancel"
 		android:showAsAction="ifRoom"
 		android:title="@string/clear_search"/>
+	<item
+		android:id="@+id/menu_item_toggle_polling"
+		android:showAsAction="ifRoom"
+		android:title="@string/start_polling"/>
 </menu>
